# lfortran

./: build1.sh  build_to_wasm.sh  commands.md
.github/workflows/: CI.yml
ci/: debug_run.sh  upload_docs.sh
examples/: asr.f90  bug_in_write_to_str_int_kind_one.f90  expr10.f90  expr11.f90  expr12.f90  expr2.f90  expr3.f90  expr4.f90  expr5.f90  expr6.f90  expr7.f90  expr8.f90  expr9.f90  read_unsupported_with_use.f90  read_unsupported_with_use_assert.f90  unsupported_format_b.f90  unsupported_format_o.f90  unsupported_format_s.f90  unsupported_format_z.f90
integration_tests/: CMakeLists.txt  file_19.f90  interface_07.f90  interface_12a.f90  intrinsics_62.f90
modern_minpack/examples/: example_hybrd.f90  example_hybrd1.f90  example_tmp.f90
src/lfortran/: fortran_evaluator.cpp  fortran_evaluator.h  fortran_kernel.cpp
src/lfortran/parser/: parser.yy  semantics.h  tokenizer.re
src/lfortran/semantics/: ast_body_visitor.cpp  ast_common_visitor.h  ast_symboltable_visitor.cpp  ast_to_asr.cpp  comptime_eval.h
src/lfortran/tests/: CMakeLists.txt
src/libasr/: asdl_cpp.py  asr_builder.h  asr_scopes.cpp  asr_scopes.h  asr_utils.cpp  asr_utils.h  asr_verify.cpp  containers.h  wasm_instructions.txt  wasm_instructions_visitor.py
src/libasr/codegen/: asr_to_llvm.cpp  asr_to_wasm.cpp  c_utils.h  wasm_assembler.h  wasm_to_wat.h
src/libasr/pass/: global_stmts_program.cpp  global_symbols.cpp  init_expr.cpp  instantiate_template.cpp  intrinsic_function_registry.h  pass_array_by_data.cpp  pass_manager.h  pass_utils.h  unique_symbols.cpp  where.cpp
src/libasr/runtime/: lfortran_intrinsics.c  lfortran_intrinsics.h
tests/reference/: asr-array_06-5f5f77a.stderr  asr-fn5-3d75eb7.json  asr-fn5-3d75eb7.stdout  asr-intrinsics_35-10733ec.json  asr-intrinsics_35-10733ec.stdout  asr-string_19-d880475.json  asr-string_19-d880475.stdout  wat-cpu_time_02_wasm-fa2b15f.json  wat-cpu_time_02_wasm-fa2b15f.stderr  wat-wasm_bind_c-c463a65.json  wat-wasm_bind_c-c463a65.stderr
